# universitas-pelita-harapan-sbdk-1541-uas-rag

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
src/rag/: app.py  cli.py  ingest.py  schema.py
