[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "policy-rag"
version = "0.0.1.dev0"
description = "A RAG (Retrieval-Augmented Generation) framework focused on policy documents."
readme = "README.md"
license = "MIT"
authors = [
  "Dwi Mulia Mokoginta <dwi-mulia-mokoginta@protonmail.com>",
  "Sapwages Triazana",
  "Sulaiman Rasyid Dinitra Azis",
  "Sony Surahman",
]
package-mode = false

packages = [
  { include = "rag", from = "src" }
]

[tool.poetry.dependencies]
cloudflare = ">=4.3.1"
fastapi = ">=0.121.3"
httpx = ">=0.27.2"
langchain = ">=0.3.2"
langchain-community = ">=0.3.1"
openai = ">=2.8.1"
poetry = ">=2.2.1"
poetry-core = ">=2.2.1"
pydantic = ">=2.12.4"
python = ">=3.11,<4.0"
uvicorn = ">=0.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
rag = "rag.__main__:main"

[tool.ruff]
src = ["src"]
exclude = [".venv"]
fix = true
show-fixes = true
output-format = "full"
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "E",   # pycodestyle error
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = false
order-by-type = false

[egg_info]
egg_base = "dist/.egg-info"
